--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <a href="#inicio" class="flex-shrink-0">
                 <!-- Imagen del logo que subiste -->
            
-               <img src="LOGOS\LOGO_SPR.PNG" alt="Speed Reaper Logo" class="h-16 w-auto">
+               <img src="LOGO_SPR.PNG" alt="Speed Reaper Logo" class="h-16 w-auto">
             </a>
             <nav class="hidden md:flex space-x-8">
                 <a href="#inicio" class="hover:text-amber-400 transition-colors">Inicio</a>
@@ -75,7 +75,7 @@
                 <div class="w-24 h-1 bg-amber-500 mx-auto mb-8"></div>
                 <div class="max-w-4xl mx-auto grid md:grid-cols-2 gap-12 items-center">
                     <!-- Logo del club en la sección -->
-                    <img src="LOGOS\LOGO_SPR.PNG" alt="Logo del club de motos Speed Reaper" class="rounded-lg w-full max-w-sm mx-auto">
+                    <img src="LOGO_SPR.PNG" alt="Logo del club de motos Speed Reaper" class="rounded-lg w-full max-w-sm mx-auto">
                     <p class="text-gray-300 text-left">
                         Más que un club, somos una familia unida por el asfalto y la pasión por las dos ruedas. Speed Reaper nació del deseo de compartir kilómetros, experiencias y una lealtad inquebrantable. Para nosotros, cada ruta es una nueva aventura y cada miembro es un hermano. Respeto, libertad y camaradería son los pilares que nos definen.
                         <br><br>
@@ -233,4 +233,5 @@
     </script>
 </body>
 </html>
+
 
