--- a/index.html
+++ b/index.html
@@ -149,9 +149,9 @@
         </section>
 
         <!-- Únete Section -->
-       <section id="contacto" class="bg-gray-800 py-20 px-6">
+     <section id="contacto" class="bg-gray-800 py-20 px-6">
   <h2 class="text-3xl font-bold text-yellow-400 mb-10 text-center">Contacto</h2>
-  <form action="https://formspree.io/f/tuID" method="POST" class="max-w-lg mx-auto bg-gray-900 p-8 rounded-xl shadow-lg space-y-4">
+  <form id="contactForm" class="max-w-lg mx-auto bg-gray-900 p-8 rounded-xl shadow-lg space-y-4">
     <input type="text" name="nombre" placeholder="Tu nombre" required class="w-full p-3 rounded bg-gray-800 border border-gray-700 focus:outline-none focus:border-yellow-400" />
     <input type="email" name="_replyto" placeholder="Tu correo" required class="w-full p-3 rounded bg-gray-800 border border-gray-700 focus:outline-none focus:border-yellow-400" />
     <textarea name="mensaje" rows="4" placeholder="Tu mensaje" required class="w-full p-3 rounded bg-gray-800 border border-gray-700 focus:outline-none focus:border-yellow-400"></textarea>
@@ -159,10 +159,10 @@
     <button type="submit" class="w-full bg-yellow-500 hover:bg-yellow-600 text-black font-semibold py-3 rounded-lg">Enviar</button>
   </form>
   <script>
-    document.querySelector('form').addEventListener('submit', function(event) {
+    document.getElementById('contactForm').addEventListener('submit', function(event) {
       event.preventDefault();
       const formData = new FormData(this);
-      fetch('https://formspree.io/f/xanddevv', {
+      fetch('https://formspree.io/f/your-unique-id', {
         method: 'POST',
         body: formData,
         headers: {
@@ -175,11 +175,13 @@
           alert('¡Gracias por contactarnos!');
           this.reset();
         } else {
-          alert('Hubo un error al enviar el formulario. Por favor, inténtalo de nuevo.');
+          console.error('Error en la respuesta de Formspree:', data);
+          alert('Hubo un error al enviar el formulario. Por favor, inténtalo de nuevo. Detalles del error en la consola.');
         }
       })
       .catch(error => {
-        console.error('Error:', error);
+        console.error('Error en la solicitud a Formspree:', error);
+        alert('Hubo un error al enviar el formulario. Por favor, inténtalo de nuevo. Detalles del error en la consola.');
       });
     });
   </script>
@@ -248,6 +250,7 @@
     </script>
 </body>
 </html>
+
 
 
 
