--- a/index.html
+++ b/index.html
@@ -129,20 +129,20 @@
                 <div class="w-24 h-1 bg-amber-500 mx-auto mb-12"></div>
                 <div class="grid grid-cols-2 md:grid-cols-4 gap-4">
                     <div class="grid gap-4">
-                        <div><img class="h-auto max-w-full rounded-lg shadow-lg" src="https://placehold.co/500x700/1F2937/FFFFFF?text=Foto+1" alt=""></div>
-                        <div><img class="h-auto max-w-full rounded-lg shadow-lg" src="https://placehold.co/500x500/1F2937/FFFFFF?text=Foto+2" alt=""></div>
+                        <div><img class="h-auto max-w-full rounded-lg shadow-lg" src="riot.jpg" alt=""></div>
+                        <div><img class="h-auto max-w-full rounded-lg shadow-lg" src="jolak.jpg" alt=""></div>
                     </div>
                     <div class="grid gap-4">
-                        <div><img class="h-auto max-w-full rounded-lg shadow-lg" src="https://placehold.co/500x500/1F2937/FFFFFF?text=Foto+3" alt=""></div>
-                        <div><img class="h-auto max-w-full rounded-lg shadow-lg" src="https://placehold.co/500x800/1F2937/FFFFFF?text=Foto+4" alt=""></div>
+                        <div><img class="h-auto max-w-full rounded-lg shadow-lg" src="malec.jpg" alt=""></div>
+                        <div><img class="h-auto max-w-full rounded-lg shadow-lg" src="oso.jpg" alt=""></div>
                     </div>
                     <div class="grid gap-4">
-                        <div><img class="h-auto max-w-full rounded-lg shadow-lg" src="https://placehold.co/500x750/1F2937/FFFFFF?text=Foto+5" alt=""></div>
-                        <div><img class="h-auto max-w-full rounded-lg shadow-lg" src="https://placehold.co/500x400/1F2937/FFFFFF?text=Foto+6" alt=""></div>
+                        <div><img class="h-auto max-w-full rounded-lg shadow-lg" src="lycal.jpg" alt=""></div>
+                        <div><img class="h-auto max-w-full rounded-lg shadow-lg" src="cuervo.jpg" alt=""></div>
                     </div>
                     <div class="grid gap-4">
-                        <div><img class="h-auto max-w-full rounded-lg shadow-lg" src="https://placehold.co/500x600/1F2937/FFFFFF?text=Foto+7" alt=""></div>
-                        <div><img class="h-auto max-w-full rounded-lg shadow-lg" src="https://placehold.co/500x600/1F2937/FFFFFF?text=Foto+8" alt=""></div>
+                        <div><img class="h-auto max-w-full rounded-lg shadow-lg" src="mesa.jpg" alt=""></div>
+                        <div><img class="h-auto max-w-full rounded-lg shadow-lg" src="mesa2.jpg" alt=""></div>
                     </div>
                 </div>
             </div>
@@ -250,6 +250,7 @@
     </script>
 </body>
 </html>
+
 
 
 
