--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
                 <div class="w-24 h-1 bg-amber-500 mx-auto mb-12"></div>
                 <div class="grid grid-cols-2 md:grid-cols-4 gap-4">
                     <div class="grid gap-4">
-                        <div><img class="h-auto max-w-full rounded-lg shadow-lg" src="riot.jpg" alt=""></div>
+                        <div><img class="h-auto max-w-full rounded-lg shadow-lg" src="riot.jpg" alt="eeeee"></div>
                         <div><img class="h-auto max-w-full rounded-lg shadow-lg" src="jolak.jpg" alt=""></div>
                     </div>
                     <div class="grid gap-4">
@@ -250,6 +250,7 @@
     </script>
 </body>
 </html>
+
 
 
 
