--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
                 <div class="grid grid-cols-2 md:grid-cols-4 gap-4">
                     <div class="grid gap-4">
                         <div><img class="h-auto max-w-full rounded-lg shadow-lg" src="riot.jpg" alt="eeeee"></div>
-                        <div><img class="h-auto max-w-full rounded-lg shadow-lg" src="jolak.jpg" alt=""></div>
+                        <div><img class="h-auto max-w-full rounded-lg shadow-lg" src="LOGO_SPR.PNG" alt=""></div>
                     </div>
                     <div class="grid gap-4">
                         <div><img class="h-auto max-w-full rounded-lg shadow-lg" src="malec.jpg" alt=""></div>
@@ -250,6 +250,7 @@
     </script>
 </body>
 </html>
+
 
 
 
