--- a/index.html
+++ b/index.html
@@ -130,19 +130,19 @@
                 <div class="grid grid-cols-2 md:grid-cols-4 gap-4">
                     <div class="grid gap-4">
                         <div><img class="h-auto max-w-full rounded-lg shadow-lg" src="riot.JPG" alt="eeeee"></div>
-                        <div><img class="h-auto max-w-full rounded-lg shadow-lg" src="LOGO_SPR.PNG" alt=""></div>
+                        <div><img class="h-auto max-w-full rounded-lg shadow-lg" src="jolak.JPG" alt=""></div>
                     </div>
                     <div class="grid gap-4">
                         <div><img class="h-auto max-w-full rounded-lg shadow-lg" src="malec.JPG" alt=""></div>
-                        <div><img class="h-auto max-w-full rounded-lg shadow-lg" src="oso.jpg" alt=""></div>
+                        <div><img class="h-auto max-w-full rounded-lg shadow-lg" src="oso.JPG" alt=""></div>
                     </div>
                     <div class="grid gap-4">
-                        <div><img class="h-auto max-w-full rounded-lg shadow-lg" src="lycal.jpg" alt=""></div>
-                        <div><img class="h-auto max-w-full rounded-lg shadow-lg" src="cuervo.jpg" alt=""></div>
+                        <div><img class="h-auto max-w-full rounded-lg shadow-lg" src="lycal.JPG" alt=""></div>
+                        <div><img class="h-auto max-w-full rounded-lg shadow-lg" src="cuervo.JPG" alt=""></div>
                     </div>
                     <div class="grid gap-4">
-                        <div><img class="h-auto max-w-full rounded-lg shadow-lg" src="mesa.jpg" alt=""></div>
-                        <div><img class="h-auto max-w-full rounded-lg shadow-lg" src="mesa2.jpg" alt=""></div>
+                        <div><img class="h-auto max-w-full rounded-lg shadow-lg" src="mesa.JPG" alt=""></div>
+                        <div><img class="h-auto max-w-full rounded-lg shadow-lg" src="mesa2.JPG" alt=""></div>
                     </div>
                 </div>
             </div>
@@ -250,6 +250,7 @@
     </script>
 </body>
 </html>
+
 
 
 
