--- a/index.html
+++ b/index.html
@@ -140,6 +140,7 @@
                         <div><img class="h-auto max-w-full rounded-lg shadow-lg" src="lycal.JPG" alt=""></div>
                         <div><img class="h-auto max-w-full rounded-lg shadow-lg" src="cuervo.JPG" alt=""></div>
                     </div>
+                    <div></div>
                     <div class="grid gap-4">
                         <div><img class="h-auto max-w-full rounded-lg shadow-lg" src="mesa.JPG" alt=""></div>
                         <div><img class="h-auto max-w-full rounded-lg shadow-lg" src="mesa2.JPG" alt=""></div>
@@ -250,6 +251,7 @@
     </script>
 </body>
 </html>
+
 
 
 
